adds livereload and portfolio view

--- a/test/header/header.html
+++ b/test/header/header.html
@@ -1,5 +1,6 @@
 <header id="main-header">
   <div id="site-title">
+    <img src="/images/fox_black.png" alt="fox" height="42" width="55">
     <a href="/">{{ site.title }}</a>
   </div>
   <div class="links">
