--- a/test/head/head.html
+++ b/test/head/head.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/png" href="/images/lambda-xl.png">
 
     <!-- Custom CSS -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="./css/syntax.css">
     <link rel="stylesheet" href="./css/lambda.css">
 </head>
