--- a/test/footer/footer.html
+++ b/test/footer/footer.html
@@ -13,24 +13,22 @@
 			</div>
 		</div>
 		<div class="footer-col-2 column">
-<!--
-			<ul>
-				{% if site.github_username %}
+			<!-- <ul>
+				{{#if site.github_username}}
 				<li>
 					<a href="https://github.com/{{ site.github_username }}">
 						<span class="icon github"><img src="/images/github-repo.png" alt="Github Repository">
             </span>
 						<span class="username"> {{ site.github_username }}</span>
 					</a>
-				</li>{% endif %} {% if site.twitter_username %}
+				</li>{{/if}} {{#if site.twitter_username }}
 				<li>
 					<a href="https://twitter.com/{{ site.twitter_username }}">
 						<span class="icon-twitter"><img align="left" width=22 height=22 src="/images/twitter_circle_black-512.png" alt="twitter link"></span>
 						<span class="username"> {{ site.twitter_username }}</span>
 					</a>
-				</li>{% endif %}
-			</ul>
--->
+				</li>{{/if}}
+			</ul> -->
 		</div>
 		<div class="footer-col-3 column">
 			<p class="text">{{ site.description }}</p>
