--- a/test/head/head.html
+++ b/test/head/head.html
@@ -8,9 +8,9 @@
     {{#if page.image}}<meta name="thumbnail" content="{{ site.baseurl }}{{ page.image }}" />{{/if}}
     <link rel="canonical" href="{{ page.url }}">
     <link rel="icon" type="image/png" href="/images/lambda-xl.png">
-
     <!-- Custom CSS -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="./css/syntax.css">
-    <link rel="stylesheet" href="./css/lambda.css">
+    {{#each css}}
+    <link rel="stylesheet" href="{{ this }}">
+    {{/each}}
 </head>
