--- a/test/head/head.html
+++ b/test/head/head.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/png" href="/images/lambda-xl.png">
     <!-- Custom CSS -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     {{#each css}}
     <link rel="stylesheet" href="{{ this }}">
     {{/each}}
